2003-01-25  John R. Jackson (jrj@purdue.edu)

	* restore-src/amidxtaped.c: Log errno when tape_stat fails.
	* restore-src/amrestore.c: Ditto.
	* tape-src/output-rait.c: Ditto.

2003-01-24  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amstatus.pl.in: print an usage by tape.

2003-01-23  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* recover-src/extract_list.c (add_extract_item, delete_extract_item): 
	  Check also for level when comparing label.

2003-01-17  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/dumper.c (update_dataptr): Loop if rc == 0.

2003-01-17  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	Do not build chg-scsi-chio, it is buggy.
	* changer-src/Makefile.am (libexec_PROGRAMS): remove $(CHIO_SCSI).
	* changer-src/Makefile.am (EXTRA_PROGRAMS): add $(CHIO_SCSI).

2003-01-16  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* configure.in: disable amrestore if --without-server is set.

2003-01-04  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* client-src/amandad.c: Use the dbfd macro instead of the external
	  variable db_fd.
	* client-src/selfcheck.c: Ditto.
	* client-src/sendbackup.c: Ditto.
	* client-src/sendsize.c: Ditto.
	* client-src/sendbackup-gnutar.c: Use save_errno instead of errno.
	* common-src/debug.c: Move most declaration inside #ifdef DEBUG_CODE.
	* server-src/amindexd.c: dup db_fd() to stderr.
	* server-src/conffile.c: Don't call error() if the config file does not
	  exist, just write to stderr and set got_parserror.

2003-01-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* recover-src/amrecover.c: Fix memory leak.

2003-01-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	Add new maxpromoteday option in a dumptype.
	* NEWS: Document it.
	* example/amanda.conf.in: Give an example
	* man/amanda.8.in: Document it.
	* server-src/amadmin.c: Print it in the disklist subcommand.
	* server-src/conffile.c: read it.