@@ -1,5 +1,10 @@
 2003-01-25  John R. Jackson (jrj@purdue.edu)
 
+	* tape-src/tapeio.c: Fix tape_access() and tape_stat() problem caused
+	  by indeterminate compiler order of evaluation.
+
+2003-01-25  John R. Jackson (jrj@purdue.edu)
+
 	* restore-src/amidxtaped.c: Log errno when tape_stat fails.
 	* restore-src/amrestore.c: Ditto.
 	* tape-src/output-rait.c: Ditto.
